Attempt build with `cross`

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,9 +10,26 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-and-upload:
+    name: Build and upload
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        include:
+          - build: linux
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+
+          - build: macos
+            os: macos-latest
+            target: aarc64-apple-darwin
+
+          - build: windows
+            os: windows-latest
+            target: x88_64-pc-windows-gnu
+
 
     steps:
     - uses: actions/checkout@v3
