--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,14 +26,25 @@ jobs:
             os: macos-latest
             target: aarc64-apple-darwin
 
-          - build: windows
+          - build: windows-gnu
+            os: windows-latest
+            target: x88_64-pc-windows-gnu
+
+          - build: windows-msvc
             os: windows-latest
             target: x88_64-pc-windows-gnu
 
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - name: Clone
+        uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+
+      - name: Build
+        uses: cross-rs/cross-rs
+        run: cross build --verbose --release --target ${{ matrix.target }}
+
