--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,45 +8,60 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-
+  # The project name specified in your Cargo.toml
+  PROJECT_NAME: rust-action-experiments
 jobs:
-  build-and-upload:
-    name: Build and upload
-
-    runs-on: ${{ matrix.os }}
-
+  build:
+    # Set the job to run on the platform specified by the matrix below
+    runs-on: ${{ matrix.runner }}
+ 
+    # Define the build matrix for cross-compilation
     strategy:
       matrix:
         include:
-          - build: linux
-            os: ubuntu-latest
-            target: x86_64-unknown-linux-musl
-
-          - build: macos
-            os: macos-latest
-            target: aarc64-apple-darwin
-
-          - build: windows-gnu
-            os: windows-latest
-            target: x88_64-pc-windows-gnu
-
-          - build: windows-msvc
-            os: windows-latest
-            target: x88_64-pc-windows-gnu
-
-
+          - name: linux-amd64
+            runner: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - name: win-amd64
+            runner: windows-latest
+            target: x86_64-pc-windows-msvc
+          - name: macos-amd64
+            runner: macos-latest
+            target: x86_64-apple-darwin
+          - name: macos-arm64
+            runner: macos-latest
+            target: aarch64-apple-darwin
+ 
+    # The steps to run for each matrix item
     steps:
-      - name: Clone
-        uses: actions/checkout@v4
-
+      - name: Checkout
+        uses: actions/checkout@v3
+ 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.target }}
-
-      - name: Build
-        uses: cross-rs/cross-rs
-        with:
-          command: build
-          args: --verbose --release --target ${{ matrix.target }}
-
+          targets: "${{ matrix.target }}"
+ 
+      - name: Setup Cache
+        uses: Swatinem/rust-cache@v2
+ 
+      - name: Build Binary
+        run: cargo build --verbose --locked --release --target ${{ matrix.target }}
+ 
+      - name: Release Binary
+        shell: bash
+        run: |
+          BIN_SUFFIX=""
+          if [[ "${{ matrix.runner }}" == "windows-latest" ]]; then
+            BIN_SUFFIX=".exe"
+          fi
+ 
+          # The built binary output location
+          BIN_OUTPUT="target/${{ matrix.target }}/release/${PROJECT_NAME}${BIN_SUFFIX}"
+ 
+          # Define a better name for the final binary
+          BIN_RELEASE="${PROJECT_NAME}-${{ matrix.name }}${BIN_SUFFIX}"
+          BIN_RELEASE_VERSIONED="${PROJECT_NAME}-${{ github.ref_name }}-${{ matrix.name }}${BIN_SUFFIX}"
+ 
+          # Move the built binary where you want it
+          mv "${BIN_OUTPUT}" "./releases/${BIN_RELEASE}"
