--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -64,4 +64,5 @@ jobs:
           BIN_RELEASE_VERSIONED="${PROJECT_NAME}-${{ github.ref_name }}-${{ matrix.name }}${BIN_SUFFIX}"
  
           # Move the built binary where you want it
+          mkdir -p "./releases"
           mv "${BIN_OUTPUT}" "./releases/${BIN_RELEASE}"
