--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,7 +65,7 @@ jobs:
         shell: bash
         run: |
           # Replace with the name of your binary
-          binary_name="test-program"
+          binary_name="rust-action-experiments"
 
           dirname="$binary_name-${{ env.VERSION }}-${{ matrix.target }}"
           mkdir "$dirname"
