--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,11 +54,12 @@ jobs:
           targets: ${{ matrix.target }}
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --verbose --release --target ${{ matrix.target }}
+        run: cargo build cargo build --verbose --release --target ${{ matrix.target }}
+        # uses: actions-rs/cargo@v1
+        # with:
+        #   use-cross: true
+        #   command: build
+        #   args: --verbose --release --target ${{ matrix.target }}
 
       - name: Build archive
         shell: bash
