--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,7 +54,7 @@ jobs:
           targets: ${{ matrix.target }}
 
       - name: Build
-        run: cargo build cargo build --verbose --release --target ${{ matrix.target }}
+        run: cargo build --verbose --release --target ${{ matrix.target }}
         # uses: actions-rs/cargo@v1
         # with:
         #   use-cross: true
