--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,7 @@ jobs:
 
           - build: macos
             os: macos-latest
-            target: x86_64-apple-darwin
+            target: aarch64-apple-darwin
 
           - build: windows-msvc
             os: windows-latest
