--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -86,6 +86,8 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           path: artifacts
+      - run: |
+          cp -r artifacts packages
       - uses: softprops/action-gh-release@v2
         with:
-          files: artifacts/*
+          files: packages/*
