--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -87,7 +87,8 @@ jobs:
         with:
           path: artifacts
       - run: |
-          cp -r artifacts packages/
+          mkdir packages
+          cp artifacts/* packages/
       - uses: softprops/action-gh-release@v2
         with:
           files: packages/*
