--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -88,7 +88,7 @@ jobs:
           path: artifacts
       - run: |
           mkdir packages
-          cp artifacts/* packages/
+          cp artifacts/* packages
       - uses: softprops/action-gh-release@v2
         with:
           files: packages/*
