--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -87,6 +87,7 @@ jobs:
         with:
           path: artifacts
       - run: |
+          ls -l artifacts
           mkdir packages
           cp artifacts/* packages
       - uses: softprops/action-gh-release@v2
