--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ $env.DIR }}
+          name: ${{ env.DIR }}
           path: ${{ env.ASSET }}
 
   release:
