--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -74,11 +74,20 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.DIR }}
+          name: ${{ matrix.target }}
           path: ${{ env.ASSET }}
 
   release:
     name: Release
+    strategy:
+      matrix:
+        include:
+          - target: x86_64-unknown-linux-musl
+          - target: aarch64-apple-darwin
+
+          # - build: windows-msvc
+          #   os: windows-latest
+          #   target: x86_64-pc-windows-msvc
     runs-on: ubuntu-latest
     needs:
     - build
@@ -89,7 +98,7 @@ jobs:
       - run: |
           ls -lR artifacts
           mkdir packages
-          cp artifacts/* packages
+          cp artifacts/${{ matrix.target }}/* packages
       - uses: softprops/action-gh-release@v2
         with:
           files: packages/*
