--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -79,15 +79,6 @@ jobs:
 
   release:
     name: Release
-    strategy:
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-          - target: aarch64-apple-darwin
-
-          # - build: windows-msvc
-          #   os: windows-latest
-          #   target: x86_64-pc-windows-msvc
     runs-on: ubuntu-latest
     needs:
     - build
@@ -98,7 +89,8 @@ jobs:
       - run: |
           ls -lR artifacts
           mkdir packages
-          cp artifacts/${{ matrix.target }}/* packages
+          cp artifacts/x86_64-unknown-linux-musl/* packages
+          cp artifacts/aarch64-apple-darwin/* packages
       - uses: softprops/action-gh-release@v2
         with:
           files: packages/*
