--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,11 +65,12 @@ jobs:
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
             7z a "$dirname.zip" "$dirname"
             ASSET=$dirname.zip
-            echo "ASSET=$dirname.zip" >> $GITHUB_ENV
+            echo "ASSET=$ASSET" >> $GITHUB_ENV
+            certutil -hashfile "$ASSET" SHA256 > "$ASSET.sha256"
           else
             tar -czf "$dirname.tar.gz" "$dirname"
             ASSET=$dirname.tar.gz
-            echo "ASSET=$dirname.tar.gz" >> $GITHUB_ENV
+            echo "ASSET=$ASSET" >> $GITHUB_ENV
             shasum -a 256 "$ASSET" > "$ASSET.sha256"
             echo "CHECKSUM=$ASSET.sha256" >> $GITHUB_ENV
           fi
