--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,13 +65,14 @@ jobs:
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
             7z a "$dirname.zip" "$dirname"
             ASSET=$dirname.zip
-            echo "ASSET=$ASSET" >> $GITHUB_ENV
             certutil -hashfile "$ASSET" SHA256 > "$ASSET.sha256"
+            echo "ASSET=$ASSET" >> $GITHUB_ENV
+            echo "CHECKSUM=$ASSET.sha256" >> $GITHUB_ENV
           else
             tar -czf "$dirname.tar.gz" "$dirname"
             ASSET=$dirname.tar.gz
-            echo "ASSET=$ASSET" >> $GITHUB_ENV
             shasum -a 256 "$ASSET" > "$ASSET.sha256"
+            echo "ASSET=$ASSET" >> $GITHUB_ENV
             echo "CHECKSUM=$ASSET.sha256" >> $GITHUB_ENV
           fi
       - name: Upload artifact
