--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,6 @@ jobs:
 
     strategy:
       matrix:
-        # You can add more, for any target you'd like!
         include:
           - build: linux
             os: ubuntu-latest
@@ -46,15 +45,15 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Build
+      - name: Build Binary
         run: cargo build --verbose --release --target ${{ matrix.target }}
 
       - name: Build archive
         shell: bash
         run: |
           binary_name="rust-action-experiments"
-
-          dirname="$binary_name-${{ env.VERSION }}-${{ matrix.target }}"
+          # dirname="$binary_name-${{ env.VERSION }}-${{ matrix.target }}"
+          dirname="$binary_name-$VERSION -${{ matrix.target }}"
           mkdir "$dirname"
           binary_suffix=
           if [[ ${{ matrix.target }} == x86_64-pc-windows-* ]]; then
@@ -66,14 +65,10 @@ jobs:
             7z a "$dirname.zip" "$dirname"
             ASSET=$dirname.zip
             certutil -hashfile "$ASSET" SHA256 > "$ASSET.sha256"
-            # echo "ASSET=$ASSET" >> $GITHUB_ENV
-            # echo "CHECKSUM=$ASSET.sha256" >> $GITHUB_ENV
           else
             tar -czf "$dirname.tar.gz" "$dirname"
             ASSET=$dirname.tar.gz
             shasum -a 256 "$ASSET" > "$ASSET.sha256"
-            # echo "ASSET=$ASSET" >> $GITHUB_ENV
-            # echo "CHECKSUM=$ASSET.sha256" >> $GITHUB_ENV
           fi
           echo "ASSET=$ASSET" >> $GITHUB_ENV
           echo "CHECKSUM=$ASSET.sha256" >> $GITHUB_ENV
