--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,7 +72,7 @@ jobs:
           ASSET=${dirname}${asset_extension}
           ${compress} "$ASSET" "$dirname"
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            $(sha_cmd/THE_ASSET/${ASSET}) > "$ASSET.sha256"
+            $(${sha_cmd/THE_ASSET/${ASSET}}) > "$ASSET.sha256"
             # certutil -hashfile "$ASSET" SHA256 > "$ASSET.sha256"
           else
             shasum -a 256 "$ASSET" > "$ASSET.sha256"
